--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,69 +1,3 @@
 <div class="container-fluid">
-  <div class="header">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link">Register</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </div>
-
-  <div class="login-form container-sm">
-    <form action="">
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label"
-          >Email address</label
-        >
-        <input
-          type="email"
-          class="form-control"
-          id="exampleFormControlInput1"
-          placeholder="name@example.com"
-        />
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label"
-          >Password</label
-        >
-        <input
-          type="password"
-          class="form-control"
-          id="exampleFormControlInput1"
-        />
-      </div>
-
-      <button type="button" class="btn btn-success">Login</button>
-    </form>
-  </div>
-
-  <footer class="page-footer">
-    <div class="footer-copyright text-center py-3">
-      © 2022 Copyright:
-      <a href="https://webyroot.com/"> webyroot.com</a>
-    </div>
-  </footer>
+  <h1>Home Page</h1>
 </div>
