--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,1 +1,28 @@
-<p>products works!</p>
+<div class="conatiner">
+  <h2 class="text-center">Products</h2>
+  <div class="row">
+    <div class="col-sm col-md-5">
+      <h4>Sidebar</h4>
+
+      <ul>
+        <li>Mobile</li>
+        <li>Laptop</li>
+        <li>Laptop accessories</li>
+      </ul>
+    </div>
+    <div class="col-sm col-md-7">
+      <div class="product" *ngFor="let product of products">
+        <div class="img">
+          <img width="200" src="{{ product.img }}" alt="" />
+        </div>
+        <div class="product_details">
+          <p>{{ product.name }}</p>
+          <p>Price : ${{ product.price }}</p>
+
+          <p>Products Details : {{ product.desc }}</p>
+          <button class="btn btn-secondary">Buy Now</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
